tests/negative/gold/number_test.gold
tests/negative/number_test.toit:54:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/number_test.toit:13:9: error: Type mismatch. Expected 'int'. Got 'float'
  foo 1 + 2.0
        ^
tests/negative/number_test.toit:14:11: error: Type mismatch. Expected 'int'. Got 'float'
  foo 1.0 + 2
          ^
tests/negative/number_test.toit:15:9: error: Type mismatch. Expected 'float'. Got 'int'
  bar 1 + 2
        ^
tests/negative/number_test.toit:16:15: error: Type mismatch. Expected 'int'. Got 'float'
  foo int_fun + 2.0
              ^
tests/negative/number_test.toit:17:11: error: Type mismatch. Expected 'int'. Got 'float'
  foo 2.0 + int_fun
          ^
tests/negative/number_test.toit:18:7: error: Type mismatch. Expected 'float'. Got 'int'
  bar int_fun
      ^~~~~~~
tests/negative/number_test.toit:19:15: error: Type mismatch. Expected 'float'. Got 'int'
  bar int_fun + 1
              ^
tests/negative/number_test.toit:20:9: error: Type mismatch. Expected 'float'. Got 'int'
  bar 0 + int_fun
        ^
tests/negative/number_test.toit:21:15: error: Type mismatch. Expected 'int'. Got 'float'
  foo int_fun + float_fun
              ^
tests/negative/number_test.toit:22:17: error: Type mismatch. Expected 'int'. Got 'float'
  foo float_fun + int_fun
                ^
tests/negative/number_test.toit:23:15: error: Type mismatch. Expected 'float'. Got 'int'
  bar int_fun + int_fun
              ^
tests/negative/number_test.toit:27:15: error: Type mismatch. Expected 'int'. Got 'float'
  foo int_fun - float_fun
              ^
tests/negative/number_test.toit:28:17: error: Type mismatch. Expected 'int'. Got 'float'
  foo float_fun - int_fun
                ^
tests/negative/number_test.toit:29:15: error: Type mismatch. Expected 'float'. Got 'int'
  bar int_fun - int_fun
              ^
tests/negative/number_test.toit:33:15: error: Type mismatch. Expected 'int'. Got 'float'
  foo int_fun * float_fun
              ^
tests/negative/number_test.toit:34:17: error: Type mismatch. Expected 'int'. Got 'float'
  foo float_fun * int_fun
                ^
tests/negative/number_test.toit:35:15: error: Type mismatch. Expected 'float'. Got 'int'
  bar int_fun * int_fun
              ^
tests/negative/number_test.toit:39:15: error: Type mismatch. Expected 'int'. Got 'float'
  foo int_fun / float_fun
              ^
tests/negative/number_test.toit:40:17: error: Type mismatch. Expected 'int'. Got 'float'
  foo float_fun / int_fun
                ^
tests/negative/number_test.toit:41:15: error: Type mismatch. Expected 'float'. Got 'int'
  bar int_fun / int_fun
              ^
tests/negative/number_test.toit:45:15: error: Type mismatch. Expected 'int'. Got 'float'
  foo int_fun % float_fun
              ^
tests/negative/number_test.toit:46:17: error: Type mismatch. Expected 'int'. Got 'float'
  foo float_fun % int_fun
                ^
tests/negative/number_test.toit:47:15: error: Type mismatch. Expected 'float'. Got 'int'
  bar int_fun % int_fun
              ^
tests/negative/number_test.toit:51:7: error: Type mismatch. Expected 'int'. Got 'float'
  foo -float_fun
      ^
tests/negative/number_test.toit:52:7: error: Type mismatch. Expected 'float'. Got 'int'
  bar -int_fun
      ^
Compilation failed.
